[package]
name = "short-resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.2"
regex = "1.9.1"
reqwest = "0.11.18"
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }
